objects/Daily_Currency_Conversion__c.object
<CustomObject>
    <description>Table Linked to Fusion for daily rates on SF supported Currencies,</description>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCorporate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Corporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oracle_Cloud_Id__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Cloud Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Currency_Id__c</fullName>
        <label>SF Currency Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Daily Currency Conversion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Conversion_Rate__c</columns>
        <columns>Description__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsCorporate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Currency Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Currency Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>